# jetson-tts

./: .gitignore  README.md  TRAINING.md  requirements-freeze.txt  requirements-melo.txt
docs/: DEVICE_ACCEPTANCE.md  ENV_SETUP.md  INTEGRATION.md  MELO_TW_ACCENT_PLAN.md  ORT_COMPAT.md  TEACHER_DECODER_CONFIG.md  TW_ACCENT_RESEARCH.md  ZH_TW_PLAN.md  streaming-arch-design.md  zh-en-tts-arch-survey-2026.md
eval/: REPORT.json  quality_hifigan.json  quality_vocos.json
ggml_offload/: CMakeLists.txt  PLAN.md  convert_onnx_to_gguf.py  export_parity_bins.py  make_parity_vectors.py
ggml_offload/src/: melo8k.cpp
ggml_offload/testdata/: parity.npz
ggml_offload/testdata/bins/: manifest.txt  y.f32  y_mask.f32  z.f32  z_p.f32
matcha8k/: asr_verify.py  dataset.py  derisk_finetune.py  dump_mels.py  dump_qwen_vocoder_pairs.py  dump_tf_mels.py  dump_tokens.py  en_eval_lines.txt  eval_ckpt_en.py  export.py  export_acoustic.py  finetune.py  frontend.py  gen_edgetts_corpus.py  gen_qwen_corpus.py  joint_train.py  lora_dec.py  lora_finetune.py  models.py  qwen_clone_spike.py  train.py  xasr_verify.py  zh_eval_lines.txt
melo_ft/: config.json
scripts/: apply_tw_lexicon.py  bench_dec_onnx.py  bench_full_onnx.py  build_corpus_text.py  dump_teacher.py  eval_quality.py  export_dec_onnx.py  export_full_onnx.py  g711.py  melo_prep_corpus.py  melo_train_compat.patch  melo_zh_en_lazyimport.patch  ort_compat_probe.py  verify_sherpa_dropin.py
streaming/: chunker.py  onnx_stream.py  stream_decoder.py
student/: audio_config.py  dataset.py  istft.py  losses.py  models.py  train.py
(+36 files in other folders)
